# claw-code-tingfeng

./: .claude-context.md  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ERRORS_FIX.md  CLAUDE_CODE_OPTIMIZATION.md  CLEANUP_MANIFEST.md  CONTRIBUTING.md  Dockerfile  FINAL_FIX_SUMMARY.txt  FINAL_SUMMARY.md  IMPROVEMENT_GUIDE.md  INTEGRATION_FINAL_SUMMARY.md  INTEGRATION_PLAN.md  INTEGRATION_PROGRESS.md  INTEGRATION_RECOMMENDATIONS.md  INTEGRATION_REPORT.md  INTEGRATION_SUGGESTIONS.md  INTEGRATION_SUGGESTIONS_V2.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  REFACTORING_BLUEPRINTS.md  SKILL_CONTRIBUTING.md  TECH_DEBT.md  TOOL_INTEGRATION_FIX.md  analyze_coverage.py  analyze_integration.py  check_tools_structure.py  cleanup.bat  coverage.json  db_structure.md  (+16 more)
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  docker.yml  quality-checks.yml  validate-plugin.yml
.reports/: codemap-diff.txt
docs/: ARCHITECTURE.md  GETTING_STARTED.md  INTEGRATION_PROPOSAL.md  INTEGRATION_REPORT.md  agent_swarm.md  aider_commands.md  brain_world_model.md  copilot-setup.md  cursor-setup.md  gemini-cli-setup.md  getting-started.md  notification-system-enhancement-plan.md  skill-anatomy.md  swarm_roles.md  windsurf-setup.md  workflow.md  world_model.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md  frontend.md
docs/archives/: ARIPER_DELIVERY_REPORT.md  ARIPER_DELIVERY_REPORT_v046.md  ARIPER_FINAL_DELIVERY_v046.md  CLAWGOD_DEPTH_INTEGRATION_REPORT.md  COMPLETION_REPORT.md  FILE_SPLITTING_REPORT.md  FINAL_INTEGRATION_REPORT.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_v2.md  INTEGRATION_REPORT.md  INTEGRATION_REPORT_ONYX.md  ONYX_INTEGRATION_COMPLETE.md  ONYX_INTEGRATION_PLAN.md  PROJECT_PROFILE.md  live_hud.py  rich_hud.py
hooks/: config.toml
latest/control/: intervention.jsonl
memory/3_integration/: TODO_integration_planning.md
plans/: CODE_CHANGES.md  DETAILED_DESIGNS.md  EXECUTION_SUMMARY.md  IMPLEMENTATION_PLAN.md  MASTER_PLAN.md  integration_plan.md  oh-my-codex_integration_plan.md
prompts/agents/: __init__.py
references/: README.md
scripts/: generate_skill_md.py
skills/deepsearch/: SKILL.md
skills/intent_router/: SKILL.md
skills/keyword_registry/: SKILL.md
skills/mode_state/: SKILL.md
skills/pipeline/: SKILL.md
skills/pipeline_orchestrator/: SKILL.md
skills/ralph_loop/: RALPH_PERSISTENCE.md  SKILL.md
src/: __init__.py  main.py
src/agent/: __init__.py  _engine_proxies.py  _event_publisher.py  _events.py  _lifecycle.py  _lifecycle_manager.py  _stream_executor.py  _system_prompt.py  agent_stream.py  chat_chunks.py  checkpoint.py  definitions.py  engine.py  engine_events.py  engine_lifecycle.py  engine_loop.py  engine_metrics.py  engine_rag.py  engine_session.py  engine_session_data.py  engine_stream.py  factory.py  history_compressor.py  intent_router.py  keyword_registry.py  mailbox.py  message_truncator.py  task_analyzer.py  task_size_detector.py  tool_executor.py  tool_manager.py
src/autoresearch/: __init__.py  contracts.py  runtime.py
src/background/: __init__.py  celery_app.py
src/brain/: __init__.py  config_patcher.py  entropy.py  evolution_oracle.py  file_watcher.py  fingerprint.py  memory_adapter.py  models.py  pattern_extractor.py  repomap.py  special_files.py  world_model.py
src/catalog/: __init__.py  manifest.py  registry.py
src/cli/: aider_commands.py  aider_commands_base.py  aider_commands_execution.py  aider_commands_file.py  aider_commands_git.py  aider_commands_info.py  aider_commands_model.py  aider_commands_registry.py  banner.py  command_registry.py  config_enhancer.py  entrypoint.py  hud.py  hud_authority.py  hud_improved.py  onboarding.py  repl.py  repl_commands.py  repl_handlers.py  repl_session.py  repl_task.py  report.py  rich_hud.py  spinner.py  split_dashboard.py  status_dashboard.py  streaming_markdown.py  surface_viewer.py  textual_dashboard.py  web_config.py
src/cli_handlers/: __init__.py  cost_analysis.py  display.py
src/config/: generator.py
src/core/: __init__.py  api_key_manager.py  approval_mode.py  args_parser.py  budget_guard.py  bug_reporter.py  cache.py  catalog.py  chat_summarizer.py  chat_summary.py  compact.py  config_injector.py  context.py  dependency_analyzer.py  deprecation_warnings.py  events.py  evolution.py  exceptions.py  experience_bank.py  git_integration.py  git_utils.py  health_check.py  history.py  hooks.py  hooks_config.py  important_files.py  indexing.py  intervention.py  lease.py  linter_rules.py  liveness.py  memory_guard.py  metrics_exporter.py  middleware.py  models.py  output_compressor.py  parallel_executor.py  patch_engine.py  paths.py  project_context.py  (+19 more)
src/hooks/: __init__.py  agents_overlay.py  codebase_map.py  explore_routing.py  prompt_guidance_contract.py  session.py
src/llm/: __init__.py  balancer.py  cache.py  channel_cache.py  channel_health.py  channel_selector.py  circuit_breaker.py  config.py  exception_handler.py  factory.py  interfaces.py  lazy_litellm.py  message_handler.py  message_pipeline.py  message_sanitizer.py  model_info.py  model_manager.py  multi_key_rotator.py  openrouter_manager.py  optimization.py  parsers.py  pricing.py  prompt_optimizer.py  protocol_converter.py  rate_limiter.py  reasoning.py  reasoning_adapter.py  structured_output.py  weak_model_router.py
src/mcp/: __init__.py  code_intel.py  (+4 more)
templates/: AGENTS.md  catalog-manifest.json
tests/: __init__.py  test_adversarial.py  test_agent_engine_refactor.py  test_aider_integration.py  test_edit_parser.py  test_goalx_integration.py  test_indexing.py  test_main.py  test_manual_god_mode.py  test_milestone_700.py  test_path_security.py  test_project_b_integration.py  test_project_b_integration_v2.py  test_rtk_integration.py  test_search_replace.py  test_slop_data.py  test_trigram_incremental.py  verify_consolidation.py  verify_task_09.py
tools/: inspect_project.py
(+679 files in other folders)
