[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawd-code"
version = "0.45.0"
description = "AI 编程代理框架 - 多 LLM 提供商 + 工具调用 + RAG + WebSocket 远程访问"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clawd Code Contributors"},
]
keywords = ["ai", "agent", "llm", "coding", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=2.30.0",
    "anthropic>=0.40.0",
    "websockets>=15.0.1",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "textual>=0.47.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
    "typer>=0.12.0",
    "prompt-toolkit>=3.0.40",
    "pyyaml>=6.0.1",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "coverage>=7.0",
]
voice = [
    "pydub>=0.25",
    "sounddevice>=0.4",
    "soundfile>=0.11",
]
watch = [
    "watchfiles>=0.20",
    "pathspec>=0.12",
    "grep-ast>=0.3",
]
scrape = [
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
]
clipboard = [
    "pyperclip>=1.8",
]
all-extras = [
    "clawd-code[voice,watch,scrape,clipboard]",
]


[project.scripts]
clawd = "src.cli.entrypoint:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = ["node_modules", ".git", "__pycache__", "dist", ".venv", "venv"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "SIM108", # use ternary instead of if-else
    "RUF001", # ambiguous unicode character string (Chinese project)
    "RUF002", # ambiguous unicode character docstring (Chinese project)
    "RUF003", # ambiguous unicode character comment (Chinese project)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
"src/reference_data/*" = ["E501"]  # auto-generated data
"src/cli/textual_dashboard.py" = ["E741"]  # HSL color math (l = lightness)
"src/utils/rich_colors.py" = ["E741"]  # HSL color math (l = lightness)

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
