[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawd-code"
version = "0.45.0"
description = "AI 编程代理框架 - 多 LLM 提供商 + 工具调用 + RAG + WebSocket 远程访问"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Clawd Code Contributors"},
]
keywords = ["ai", "agent", "llm", "coding", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "openai>=2.30.0,<2.33",
    "anthropic>=0.40.0",
    "websockets>=15.0.1",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0,<0.28",
    "aiohttp>=3.9.0,<3.14",  # 用于通知系统异步HTTP请求
    "rich>=13.7.0,<14",
    "textual>=0.47.0,<0.48",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0,<3.2",
    "typer>=0.12.0,<0.25",
    "prompt-toolkit>=3.0.40",
    "pyyaml>=6.0.1,<6.1",
    "jinja2>=3.0.0,<3.2",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0; python_version < '3.11'",
    "toml>=0.10.2; python_version >= '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<8",
    "pytest-asyncio>=0.23,<0.24",
    "coverage>=7.0,<8",
]
voice = [
    "pydub>=0.25,<0.26",
    "sounddevice>=0.4,<0.6",
    "soundfile>=0.11,<0.13",
]
watch = [
    "watchfiles>=0.20,<0.25",
    "pathspec>=0.12,<0.14",
    "grep-ast>=0.3,<0.4",
]
scrape = [
    "playwright>=1.40,<1.45",
    "beautifulsoup4>=4.12,<4.13",
]
clipboard = [
    "pyperclip>=1.8",
]
all-extras = [
    "clawd-code[voice,watch,scrape,clipboard]",
]


[project.scripts]
clawd = "src.cli.entrypoint:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = ["node_modules", ".git", "__pycache__", "dist", ".venv", "venv"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]
# 从 oh-my-codex 汲取：强制覆盖率阈值，确保代码质量
fail_under = 60

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
# 显示未覆盖的行号，便于改进测试
show_missing = true
# 按文件排序输出
sort = "Cover"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # do not perform function call in argument defaults
    "SIM108", # use ternary instead of if-else
    "RUF001", # ambiguous unicode character string (Chinese project)
    "RUF002", # ambiguous unicode character docstring (Chinese project)
    "RUF003", # ambiguous unicode character comment (Chinese project)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
"src/reference_data/*" = ["E501"]  # auto-generated data
"src/cli/textual_dashboard.py" = ["E741"]  # HSL color math (l = lightness)
"src/utils/rich_colors.py" = ["E741"]  # HSL color math (l = lightness)

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
